# PUT

./: .gitmodules  README.md
Capacitated vehicle routing problem/AntAlgorithm/: input.txt  instrukcja.txt  output.txt
Capacitated vehicle routing problem/GREEDY/: Instrukcja.txt  main.cpp  output.txt
Java_VODSimulator/KamilKowalczykVod/: README.txt
KCK/: Sygnaly-Lab1-clear.ipynb  Sygnaly-Lab2-clear.ipynb  Sygnaly-Tutorial-clear.ipynb  inf136742.py
KOWAL_GAME/: BlueGuy.cpp  BlueGuy.h  Main.cpp  Main.h  Przeszkoda.cpp  Przeszkoda.h  Thing.cpp  Thing.h
sem1/PP/Domowa wypożyczalnia ksiązek/: Domowa_wypożyczalnia_ksiązek.dpr  Domowa_wypożyczalnia_ksiązek.dproj  Domowa_wypożyczalnia_ksiązek.dproj.local  Domowa_wypożyczalnia_ksiązek.identcache  Domowa_wypożyczalnia_ksiązek.res  Domowa_wypożyczalnia_ksiązek.stat  Project1.identcache  Project1.stat  Unit1.pas
sem1/PP/Obiektowy Armstrong/: armstrong.lpr
sem2/PN/KOWAL_GAME/: BlueGuy.cpp  BlueGuy.h  Main.cpp  Main.h  Przeszkoda.cpp  Przeszkoda.h  Thing.cpp  Thing.h  readme.txt
sem5/KCK/GenderVoiceDetector/: inf136742.py
sem5/KCK/NotesDetector/: main.py
sem5/SK2/Hangman/: CMakeLists.txt  client.cpp  client.h  constants.h  data_loader.hpp  gettingdatathread.cpp  gettingdatathread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.hpp  resources.qrc  statuses.hpp  user_data.txt  words.txt  words1.txt
sem5/SK2/Hangman/server/: CMakeLists.txt  server.cpp
sem6/AM/AM lab1/: index.html  style.css
st2sem1/FD/: Headless CMS.pptx
st2sem1/ZP/: Incredible Adventures - ZP.xlsx
(+579 files in other folders)
